去掉清单文件的包名